@@ -1,4 +1,6 @@
 DIST gitosis-gentoo-20081025-acf867e8cd12f31dcf0f9fff92f3a3c34912b751.tar.bz2 36630 RMD160 4449b991dd6706c57de0b4726c102adc79197859 SHA1 54683810416a1a115d096bcd5cb0f1b829b62402 SHA256 e84e9d40ab11c156b30ca5d781c4e6621ece0ef18e9140b9714e75373d8fa402
+DIST gitosis-gentoo-20090515-1d768c5b87bbbe7ab1f3356c98943ed099bd40f3.tar.bz2 36988 RMD160 79122dd7aaeb1ef8fd23f2d2c09e69ef28698591 SHA1 9b22baee81244069002e0660e6d2ed7d24cd98c2 SHA256 6010681dcb8aa9aaa6ed720494daf6d366ed12eb6dc65044ceb1a924fa305743
 EBUILD gitosis-gentoo-0.2_p20081028.ebuild 1251 RMD160 9bfe8e54e87c5c7d9af8e1157e3466f267df080e SHA1 259ea46f64369cbec6e11e1c1030152d144ccf2a SHA256 aa9f7fa3373679d5af874427b2b4066ce6e065670706e23d53e85c06abfa8ffb
-MISC ChangeLog 1358 RMD160 a38dd751cdb69b84b0b3a8e1055344e588e8fa76 SHA1 4cccc255b8e9d2f7451a16f22cf83b8db72fe517 SHA256 4d94d60ac862576568717ed2683a6072058fc4e866a2e33e8f6f58c2b8acfb37
+EBUILD gitosis-gentoo-0.2_p20090515.ebuild 1394 RMD160 063aa2d80f80ab484df02fe81f84cd3c20683da5 SHA1 15ab7727fca204ab887dd1b261e646761f9e47b7 SHA256 caa9922025293cca4ec8de90d93538ece22dfddcf1d673ec62e2bcb4172e93e9
+MISC ChangeLog 1533 RMD160 6bd09d604aa0ddc5f4e7587047240c33d3e401c7 SHA1 548ad476ce210cd73ed2d5225b9b3257a3088fb4 SHA256 4ec4c783b002e3e66a4f51e2b56b58f07e3facc9354b26ae2fdb05d8a6df18c5
 MISC metadata.xml 377 RMD160 74cab863bd42cd43f0c07276c4be096e5fa38291 SHA1 c05576f5fc0e51708a151d73f8db0f04d3d36f8c SHA256 ea6084f3ae1cc0247c58bceae2259e7eb800e94f39678c2d004cfd4ae6c42b70
