@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/gitosis-gentoo
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gitosis-gentoo/ChangeLog,v 1.5 2008/11/24 01:26:33 robbat2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gitosis-gentoo/ChangeLog,v 1.6 2009/05/15 09:50:59 robbat2 Exp $
+
+*gitosis-gentoo-0.2_p20090515 (15 May 2009)
+
+  15 May 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +gitosis-gentoo-0.2_p20090515.ebuild:
+  Version bump with the cgit patch.
 
   24 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
   gitosis-gentoo-0.2_p20080711.ebuild, gitosis-gentoo-0.2_p20081028.ebuild:
